<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sudoku</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Adroid Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_test">\
	Sudoku is a logic-based number placement puzzle.
	Starting with a partially ...
	</string>
	<!-- menu -->
	<string name="settings_label">Settings...</string>
	<string name="settings_title">Sudoku settings</string>
	<string name="settings_shortcut">s</string>
	<string name="settings_title2">temp setting menu</string>
	<string name="settings_shortcut2">s</string>
	<string name="music_title">Music</string>
	<string name="music_summary">Play background music</string>
	<string name="hints_title">Hints</string>
	<string name="hints_summary">Show hints during play</string>
	<!-- start -->
	<string name="new_game_title">Difficulty</string>
	<string name="easy_label">Easy</string>
	<string name="medium_label">Medium</string>
	<string name="hard_label">Hard</string>
	<!--  game -->
	<string name="game_title">Game</string>
	<string name="no_moves_label">No moves</string>
	<string name="keypad_title">keypad</string>
	<string name="graphics_title">Graphics</string>
</resources>
